2002-11-12  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (Binary.EmitBranchable): Also handle the cases for
	LogicalOr and LogicalAnd that can benefit from recursively
	handling EmitBranchable.  The code now should be nice for Paolo.

2002-11-08  Miguel de Icaza  <miguel@ximian.com>

	* typemanager.cs (LookupType): Added a negative-hit hashtable for
	the Type lookups, as we perform quite a number of lookups on
	non-Types.  This can be removed once we can deterministically tell
	whether we have a type or a namespace in advance.

	But this might require special hacks from our corlib.

	* TODO: updated.

	* ecore.cs (TryImplicitIntConversion): Handle conversions to float
	and double which avoids a conversion from an integer to a double.

	* expression.cs: tiny optimization, avoid calling IsConstant,
	because it effectively performs the lookup twice.

2002-11-06  Miguel de Icaza  <miguel@ximian.com>

	But a bogus return here to keep the semantics of the old code
	until the Mono runtime is fixed.
	
	* pending.cs (GetMissingInterfaces): New method used to remove all
	the interfaces that are already implemented by our parent
	classes from the list of pending methods. 

	* interface.cs: Add checks for calls after ResolveTypeExpr.

2002-11-05  Miguel de Icaza  <miguel@ximian.com>

	* class.cs (Class.Emit): Report warning 67: event not used if the
	warning level is beyond 3.

	* ecore.cs (Expression.ConvertExplicit): Missed a check for expr
	being a NullLiteral.

	* cs-parser.jay: Fix, Gonzalo reverted the order of the rank
	specifiers. 

	* class.cs (TypeContainer.GetClassBases): Cover a missing code
	path that might fail if a type can not be resolved.

	* expression.cs (Binary.Emit): Emit unsigned versions of the
	operators. 

	* driver.cs: use error 5.
	
2002-11-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* cs-parser.jay: simplified a rule and 5 SR conflicts dissapeared.

2002-11-01  Miguel de Icaza  <miguel@ximian.com>
